--- a/TODO.txt
+++ b/TODO.txt
@@ -94,3 +94,7 @@ rake about显示所有gem版本和环境
 登录页面：
 完善课程
 
+2012-07-03
+login页面逻辑，登录后返回courses首页，右边显示用户信息
+导航栏需要为变量，登录/注册钮在用户登录后换成用户个人信息
+登录需要pwd加密+salt
